--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=61bc5ee37517ea84ed7e5224dcfca15c",
+    "/css/app.css": "/css/app.css?id=cd020d725400479c467742b11fbed172"
 }
