--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.1",
         "tailwindcss": "^3.0.0"
+    },
+    "dependencies": {
+        "dropzone": "^6.0.0-beta.2",
+        "fullcalendar": "^5.11.0"
     }
 }
